--- a/css/main.css
+++ b/css/main.css
@@ -39,6 +39,11 @@ body {
   padding: 2rem 2rem;
   color: var(--dark-purple);
 }
+@media (min-width: 720px) {
+  .main {
+    padding: 2.5rem 2.5rem 2rem;
+  }
+}
 .main header {
   display: flex;
   align-items: center;
@@ -47,6 +52,14 @@ body {
 }
 .main header img {
   width: 1.5rem;
+}
+@media (min-width: 720px) {
+  .main header {
+    font-size: 1.6rem;
+  }
+  .main header img {
+    width: 2rem;
+  }
 }
 .main .accordions .accordion {
   padding: 1rem 0;
