--- a/sass/main.scss
+++ b/sass/main.scss
@@ -63,12 +63,14 @@ body {
             padding: 1rem 0;
             border-bottom: 1px solid var(--light-pink);
             &__header {
+                width: 100%;
                 display: flex;
                 justify-content: space-between;
                 align-items: center;
                 margin-bottom: 0rem;
                 cursor: pointer;
                 &__title {
+                    width: 100%;
                     font-size: 1.2rem;
                     line-height: 1.7rem;
                 }
@@ -78,13 +80,12 @@ body {
 
                 &__actions {
                     display: flex;
-
                     &__button {
+                        cursor: pointer;
                         background: none;
                         border: none;
                         padding: 0;
                         margin: 0;
-
                         img {
                             width: 2rem;
                         }
