--- a/sass/main.scss
+++ b/sass/main.scss
@@ -27,7 +27,6 @@ body {
     body{
         background-image: (url('../assets/images/background-pattern-desktop.svg'));
         background-repeat: no-repeat;
-        background-position-y: 0px;
     }
 }
 
@@ -40,6 +39,7 @@ body {
     padding: 2rem 2rem;
     @media (min-width: 720px){
         padding: 2.5rem 2.5rem 2rem;
+        margin-top: 180px;
     }
     color: var(--dark-purple);
     header {
